option java_package = "org.apache.hadoop.yarn.proto";
option java_outer_classname = "YarnServerCommonProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

import "yarn_protos.proto";

message NodeStatusProto {
  optional NodeIdProto node_id = 1;
  optional int32 response_id = 2;
  repeated ApplicationIdContainerListMapProto containers = 3;
  optional NodeHealthStatusProto nodeHealthStatus = 4;
}

message RegistrationResponseProto {
  optional bytes secret_key = 1;
}

message HeartbeatResponseProto {
  optional int32 response_id = 1;
  optional bool reboot = 2;
  repeated ContainerIdProto containers_to_cleanup = 3;
  repeated ApplicationIdProto applications_to_cleanup = 4;
}

message ContainerListProto {
  repeated ContainerProto container = 1;
}

message ApplicationIdContainerListMapProto {
  optional ApplicationIdProto application_id = 1;
  optional ContainerListProto value = 2;
}

